crates/swc/tests/tsc-references/types/primitives/void/invalidVoidValues/input.ts/es2015.2.minified/output.js
var x, a1, b, M, E, M;
x = 1, x = "", x = !0;
let E;
(E = E || (E = {
}))[E.A = 0] = "A", x = E, x = E.A, x = a1, x = b, x = {
    f () {
    }
}, (M = M || (M = {
})).x = 1, x = M, x = function(a) {
    x = a;
};
